--- a/package.xml
+++ b/package.xml
@@ -45,12 +45,27 @@
   <build_depend>image_transport</build_depend>
   <build_depend>opencv</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>libaria</build_depend>
+  <build_depend>nav_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>tf</build_depend>
+  <build_depend>std_srvs</build_depend>
+
   <run_depend>cv_bridge</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>opencv</run_depend>
   <run_depend>roscpp</run_depend>
-
+  <run_depend>libaria</run_depend>
+  <run_depend>nav_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <build_depend>std_msgs</build_depend>
+  <run_depend>tf</run_depend>
+  <run_depend>std_srvs</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
