connect kinect with pioneer, but need change on the publisher

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(kinect_slam)
 
 find_package(catkin REQUIRED COMPONENTS
+  std_msgs
   nav_msgs
   sensor_msgs
   message_generation
@@ -18,6 +19,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
   FILES
   BumperState.msg
+  PioneerVelControl.msg
 )
 
 generate_dynamic_reconfigure_options(
@@ -45,16 +47,19 @@ endif()
 
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 
-add_executable(landmark_matcher src/landmark_matcher_main.cpp src/LandmarkMatcherNode.cpp src/BRIEF.cpp src/HarrisDetector.cpp src/BRIEF.cpp src/StereoMatcher.cpp)
+add_executable(slam_node src/ekf_slam_node_main.cpp src/EKF_SLAM_Node.cpp src/EKF_SLAM.cpp)
+add_executable(kinect_node src/LandmarkExtractorNode_main.cpp src/LandmarkExtractorNode.cpp src/HarrisDetector.cpp src/BRIEF.cpp)
 
 add_executable(aria src/RosAria.cpp src/LaserPublisher.cpp)
 add_dependencies(aria rosaria_gencfg)
 add_dependencies(aria rosaria_gencpp)
-add_dependencies(landmark_matcher ${PROJECT_NAME}_gencfg)
+add_dependencies(slam_node ${PROJECT_NAME}_gencfg)
+add_dependencies(kinect_node ${PROJECT_NAME}_gencfg)
 
 find_package(OpenCV REQUIRED)
 include_directories(SYSTEM ${OpenCV_INCLUDE_DIRS})
-target_link_libraries(landmark_matcher ${OpenCV_LIBRARIES} ${catkin_LIBRARIES})
+target_link_libraries(slam_node ${OpenCV_LIBRARIES} ${catkin_LIBRARIES})
+target_link_libraries(kinect_node ${OpenCV_LIBRARIES} ${catkin_LIBRARIES})
 
 target_link_libraries(aria ${catkin_LIBRARIES} ${Boost_LIBRARIES} Aria pthread dl rt)
 set_target_properties(aria PROPERTIES COMPILE_FLAGS "-fPIC")
@@ -64,6 +69,7 @@ generate_messages(
 )
 catkin_package(
     DEPENDS roscpp nav_msgs geometry_msgs sensor_msgs tf
+    CATKIN_DEPENDS message_runtime
 )
 
 install(
