--- a/cfg/KinectSLAMConfig.cfg
+++ b/cfg/KinectSLAMConfig.cfg
@@ -23,7 +23,7 @@ gen.add("vertical_offset", int_t, 0, "vertical_offset", 30, 0, 300)
 gen.add("min_horizontal_threshold", int_t, 0, "min_horizontal_threshold", 3, 0, 9)
 gen.add("max_horizontal_threshold", int_t, 0, "max_horizontal_threshold", 80, 10, 300)
 
-gen.add("matcher_dist_threshold", double_t, 0, "matcher_dist_threshold", 0.85, 0, 1)
+gen.add("dist_threshold", double_t, 0, "dist_threshold", 0.85, 0, 1)
 
 gen.add("tf_threshold", double_t, 0, "tf_threshold", 500, 0, 5000)
 
