--- a/package.xml
+++ b/package.xml
@@ -54,6 +54,7 @@
   <build_depend>tf</build_depend>
   <build_depend>std_srvs</build_depend>
 
+  <run_depend>message_runtime</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>image_transport</run_depend>
