--- a/cfg/KinectSLAMConfig.cfg
+++ b/cfg/KinectSLAMConfig.cfg
@@ -19,11 +19,8 @@ gen.add("descriptor_smooth_size", int_t, 0, "descriptor_smooth_size", 6, 1, 10)
 gen.add("descriptor_brief_size", int_t, 0, "descriptor_brief_size", 1, 1, 3)
 gen.add("descriptor_patch_size", int_t, 0, "descriptor_patch_size", 19, 15, 30)
 
-gen.add("vertical_offset", int_t, 0, "vertical_offset", 30, 0, 300)
-gen.add("min_horizontal_threshold", int_t, 0, "min_horizontal_threshold", 3, 0, 9)
-gen.add("max_horizontal_threshold", int_t, 0, "max_horizontal_threshold", 80, 10, 300)
-
-gen.add("dist_threshold", double_t, 0, "dist_threshold", 0.85, 0, 1)
+gen.add("max_signature_threshold", int_t, 0, "max_signature_threshold", 1, 10, 300)
+gen.add("match_threshold", double_t, 0, "match_threshold", 0.85, 0, 1)
 
 gen.add("tf_threshold", double_t, 0, "tf_threshold", 500, 0, 5000)
 
