--- a/cfg/KinectSLAMConfig.cfg
+++ b/cfg/KinectSLAMConfig.cfg
@@ -22,6 +22,6 @@ gen.add("descriptor_patch_size", int_t, 0, "descriptor_patch_size", 19, 15, 30)
 gen.add("max_signature_threshold", int_t, 0, "max_signature_threshold", 1, 10, 300)
 gen.add("match_threshold", double_t, 0, "match_threshold", 0.85, 0, 1)
 
-gen.add("tf_threshold", double_t, 0, "tf_threshold", 500, 0, 5000)
+gen.add("new_landmark_threshold", int_t, 0, "new_landmark_threshold", 500, 0, 5000)
 
 exit(gen.generate(PACKAGE, "kinect_slam", "KinectSLAM"))
