--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,6 @@ find_package(catkin REQUIRED COMPONENTS
 
 add_message_files(
   FILES
-  PioneerVelControl.msg
   LandmarkMsg.msg
 )
 
@@ -33,18 +32,18 @@ include_directories(${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} )
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 
 add_executable(slam_node src/ekf_slam_node_main.cpp src/EKF_SLAM_Node.cpp src/EKF_SLAM.cpp)
-add_executable(kinect_node src/LandmarkExtractorNode_main.cpp src/LandmarkExtractorNode.cpp src/HarrisDetector.cpp src/BRIEF.cpp)
-add_executable(pioneer_control_node src/control_main.cpp src/Control_Node.cpp src/Control.cpp)
+add_executable(landmark_node src/LandmarkExtractorNode_main.cpp src/LandmarkExtractorNode.cpp src/HarrisDetector.cpp src/BRIEF.cpp)
+add_executable(control_node src/control_main.cpp src/Control_Node.cpp src/Control.cpp)
 
 add_dependencies(slam_node ${PROJECT_NAME}_gencfg)
-add_dependencies(kinect_node ${PROJECT_NAME}_gencfg)
+add_dependencies(landmark_node ${PROJECT_NAME}_gencfg)
 
 find_package(OpenCV REQUIRED)
 include_directories(SYSTEM ${OpenCV_INCLUDE_DIRS})
 
 target_link_libraries(slam_node ${catkin_LIBRARIES})
-target_link_libraries(kinect_node ${OpenCV_LIBRARIES} ${catkin_LIBRARIES})
-target_link_libraries(pioneer_control_node
+target_link_libraries(landmark_node ${OpenCV_LIBRARIES} ${catkin_LIBRARIES})
+target_link_libraries(control_node
    ${catkin_LIBRARIES}
 )
 
