--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 add_executable(slam_node src/ekf_slam_node_main.cpp src/EKF_SLAM_Node.cpp src/EKF_SLAM.cpp)
 add_executable(landmark_node src/LandmarkExtractorNode_main.cpp src/LandmarkExtractorNode.cpp src/HarrisDetector.cpp src/BRIEF.cpp)
 add_executable(control_node src/control_main.cpp src/Control_Node.cpp src/Control.cpp)
+add_executable(turn_left src/turn_left.cpp)
+add_executable(turn_right src/turn_right.cpp)
 
 add_dependencies(slam_node ${PROJECT_NAME}_gencfg)
 add_dependencies(landmark_node ${PROJECT_NAME}_gencfg)
@@ -43,9 +45,9 @@ include_directories(SYSTEM ${OpenCV_INCLUDE_DIRS})
 
 target_link_libraries(slam_node ${catkin_LIBRARIES})
 target_link_libraries(landmark_node ${OpenCV_LIBRARIES} ${catkin_LIBRARIES})
-target_link_libraries(control_node
-   ${catkin_LIBRARIES}
-)
+target_link_libraries(control_node ${catkin_LIBRARIES})
+target_link_libraries(turn_left ${catkin_LIBRARIES})
+target_link_libraries(turn_right ${catkin_LIBRARIES})
 
 generate_messages(
   DEPENDENCIES geometry_msgs std_msgs
