--- a/cfg/LandmarkExtractorConfig.cfg
+++ b/cfg/LandmarkExtractorConfig.cfg
@@ -18,4 +18,7 @@ gen.add("descriptor_smooth_size", int_t, 0, "descriptor_smooth_size", 7, 1, 10)
 gen.add("descriptor_brief_size", int_t, 0, "descriptor_brief_size", 1, 1, 3)
 gen.add("descriptor_patch_size", int_t, 0, "descriptor_patch_size", 19, 15, 30)
 
+gen.add("kinect_min_depth", double_t, 0, "kinect_min_depth", 0.8, 0, 4)
+gen.add("kinect_max_depth", double_t, 0, "kinect_max_depth", 3.5, 4, 10)
+
 exit(gen.generate(PACKAGE, "kinect_slam", "LandmarkExtractor"))
